force-app/main/default/objects/HotelBooking__c/HotelBooking__c.object-meta.xml
<CustomObject>
    <label>HotelBooking</label>
    <nameField>
        <displayFormat>BK-{0000}</displayFormat>
        <label>HotelBooking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HotelBookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>