force-app/main/default/objects/HotelBooking__c/fields/CheckIn_Time__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_Time__c</fullName>
    <label>CheckIn_Time</label>
    <type>DateTime</type>
</CustomField>