force-app/main/default/objects/HotelBooking__c/fields/CheckOut_Time__c.field-meta.xml
<CustomField>
    <fullName>CheckOut_Time__c</fullName>
    <label>CheckOut_Time</label>
    <type>DateTime</type>
</CustomField>