force-app/main/default/objects/HotelBooking__c/fields/CustomerEmail__c.field-meta.xml
<CustomField>
    <fullName>CustomerEmail__c</fullName>
    <label>CustomerEmail</label>
    <type>Email</type>
</CustomField>