force-app/main/default/objects/HotelBooking__c/fields/HotelCustomer__c.field-meta.xml
<CustomField>
    <fullName>HotelCustomer__c</fullName>
    <label>HotelCustomer</label>
    <referenceTo>HotelCustomer__c</referenceTo>
    <relationshipLabel>HotelBookings</relationshipLabel>
    <relationshipName>HotelBookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>