force-app/main/default/objects/HotelBooking__c/fields/RoomNo__c.field-meta.xml
<CustomField>
    <fullName>RoomNo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RoomNo</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>HotelBookings</relationshipLabel>
    <relationshipName>HotelBookings</relationshipName>
    <type>Lookup</type>
</CustomField>