force-app/main/default/objects/HotelBooking__c/validationRules/CheckOut_Time_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckOut_Time_rules</fullName>
    <active>true</active>
    <description>CheckOut-Time should be greater than CheckIn-Time</description>
    <errorConditionFormula>CheckOut_Time__c &lt;  CheckIn_Time__c</errorConditionFormula>
    <errorDisplayField>CheckOut_Time__c</errorDisplayField>
    <errorMessage>CheckOut-Time should be greater than CheckIn-Time</errorMessage>
</ValidationRule>