force-app/main/default/objects/HotelBooking__c/validationRules/when_room_status_is_CheckIn.validationRule-meta.xml
<ValidationRule>
    <fullName>when_room_status_is_CheckIn</fullName>
    <active>true</active>
    <description>if Your Status is Confirmed then Your RoomNo is required.</description>
    <errorConditionFormula>AND( ISPICKVAL(Status__c , &quot;CheckIn&quot;)  , OR(ISBLANK( RoomNo__r.Room_No__c ),ISBLANK( CheckIn_Time__c ),NOT(ISBLANK( CheckOut_Time__c )))  )</errorConditionFormula>
    <errorDisplayField>CheckIn_Time__c</errorDisplayField>
    <errorMessage>if Your Status is CheckIn then Your RoomNo is required and your CheckInTime required and Your CheckOutTime should be empty</errorMessage>
</ValidationRule>