force-app/main/default/objects/HotelBooking__c/validationRules/when_room_status_is_confirmed.validationRule-meta.xml
<ValidationRule>
    <fullName>when_room_status_is_confirmed</fullName>
    <active>true</active>
    <description>when room status is Confirmed Then RoomNo is required.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c  ,&quot;Confirmed&quot;),OR(ISBLANK(RoomNo__r.Room_No__c),NOT(ISBLANK( CheckIn_Time__c ) ), NOT(ISBLANK( CheckOut_Time__c ))))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>If Your Status is Confirmed then Your RoomNo is required.Check In Time and Check Out Time must be empty.</errorMessage>
</ValidationRule>