force-app/main/default/objects/HotelBooking__c/validationRules/when_status_not_confirmed.validationRule-meta.xml
<ValidationRule>
    <fullName>when_status_not_confirmed</fullName>
    <active>true</active>
    <description>when HotelBooking.Status == Not-Confirmed then room no not needed if there is a room no then generate an error</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Not-Confirmed&quot;)</errorConditionFormula>
    <errorDisplayField>RoomNo__c</errorDisplayField>
    <errorMessage>You Cannot Select a Room or CheckIn-Time or CheckOut-Time if Your Status is == Not-Confirmed</errorMessage>
</ValidationRule>