force-app/main/default/objects/HotelBooking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>HotelCustomer__c</columns>
    <columns>RoomNo__c</columns>
    <columns>Amount__c</columns>
    <columns>CheckIn_Time__c</columns>
    <columns>CheckOut_Time__c</columns>
    <columns>CustomerEmail__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>